# agentic__data_analyst

./: MANIFEST.in  README.md  main.py  pyproject.toml
ai_analyst/: __init__.py
ai_analyst/analysis_kit/: __init__.py  analyse.py  config.py
ai_analyst/classes/: __init__.py  api_chat.py  dummy_client.py  local_chat.py
ai_analyst/general_utils/: file_utils.py  image_utils.py  pdf_utils.py  text_utils.py
ai_analyst/resources/: create_logo.py
ai_analyst/utils/: analysis_toolkit.py  inference.py  llm_utils.py
