[tool.poetry]
name = "ai_analyst"
version = "0.3.3"
description = "A data analysis project using multiple LLMs"
authors = ["Thomas Meißner <meissnercorporation@gmx.de>"]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/ThomasMeissnerDS/BlueCast"
readme = "README.md"
packages = [
    { include = "ai_analyst" },
]
include = [
    "ai_analyst/resources/*",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"  # Updated to match scipy requirements
accelerate = ">=1.6.0"
bitsandbytes = ">=0.45.5"
fpdf = ">=1.7.2"
google-genai = ">=1.0.0"
matplotlib = ">=3.0.0"
numpy = ">=1.26.4"
pandas = ">=2.0.0"
scipy = ">=1.15.2"
seaborn = ">=0.13.2"
statsmodels = ">=0.14.0"
# "torch>=2.7.0", # directly follow their instructions for GPU support
transformers = ">=4.51.3"

[build-system]
requires = [
    "poetry-core>=1.0.0", 
    "poetry-dynamic-versioning",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)$"
